[package]
name = "myps-editor"
description = ""
version = "0.1.0"
authors = ["Nils Olsson <nilso@enosis.net>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
#default = ["wee_alloc"]

[dependencies]
wasm-bindgen = { version = "*", features = ["serde-serialize"] }
wee_alloc = { version = "*", optional = true }
serde = { version = "*", features = ["derive"] }
# futures = "*"

[dependencies.web-sys]
version = "*"
features = ["console"]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "*"

# These crates are used for running unit tests.
[dev-dependencies]
# wasm-bindgen-test = "*"
# futures = "*"
# js-sys = "*"
# wasm-bindgen-futures = "*"
